Changes for 1.5.4

 - [DEV-176] implemented "color only non-zero values" in "Status of triggers" (Artem)
 - [DEV-175] added last login time to users tab (Artem)
 - [DEV-178] improved the permissions scheme in frontend (Artem)

Changes for 1.5.3

 - [ZBX-380] added support of directories for Include in configuration file (Sasha)
 - [DEV-171] added support of notification escalations on frontend side (Artem)
 - [DEV-173] added support of macros {EVENT.DATE},{EVENT.TIME},{EVENT.AGE} and {ESC.HISTORY} (Sasha)
 - [DEV-173] added support of notification escalations on server side (Sasha)
 - [DEV-172] added support of Apache authentication (Artem)
 - [DEV-170] improved charts period & start time selection (Artem)
 - [DEV-163] added support of perf_counter[path<,period>] (Sasha)
 - [DEV-169] improved msg functionality in GUI (Artem)
 - [DEV-149] added hosts masss update functionality (Artem)
 - [DEV-167] added support of Host Template=<template> in actions (Sasha)
 - [DEV-168] added more supported items in FreeBSD, NetBSD and OpenBSD (Sasha)
 - [DEV-161] changed greeting message (Artem)
 - [DEV-157] added fullscreen icon to monitoring screens (Artem)

Changes for 1.5.2:

 - [DEV-153] added protection against brute force attack (Artem)
 - [DEV-158] added standart sorting to screens (Artem)
 - [DEV-154] added more flexibility to scripts (Artem)
 - [DEV-166] fixed problem with node syncing (Sasha)
 - [DEV-145] added Ldap authentication (Artem)
 - [DEV-147] added support network and disk stats under OpenBSD (Sasha)
 - [DEV-164] added required server performance info to Status of ZABBIX (Alexei)
 - [DEV-160] added time filter in "Availability report" (Artem)
 - [DEV-159] added automatic selection first group and host in WEB monitoring (Artem)
 - [DEV-148] added support of DisablePassive parameter for agent (Alexei)
 - [DEV-143] improved support of numeric performance counters for Windows agents (Sasha)

Changes for 1.5.1:
