@@ -113,6 +113,22 @@ int	get_value_internal(DB_ITEM *item, AGENT_RESULT *result)
 		i = DBget_queue_count();
 		SET_UI64_RESULT(result, i);
 	}
+	else if (0 == strcmp(tmp, "uptime"))		/* zabbix["uptime"] */
+	{
+		if (1 != nparams)
+			goto not_supported;
+
+		i = time(NULL)-CONFIG_SERVER_STARTUP_TIME;
+		SET_UI64_RESULT(result, i);
+	}
+	else if (0 == strcmp(tmp, "boottime"))		/* zabbix["boottime"] */
+	{
+		if (1 != nparams)
+			goto not_supported;
+
+		i = CONFIG_SERVER_STARTUP_TIME;
+		SET_UI64_RESULT(result, i);
+	}
 	else if (0 == strcmp(tmp, "proxy"))		/* zabbix["proxy",<hostname>,"lastaccess"] */
 	{
 		if (3 != nparams)
