@@ -25,6 +25,7 @@
 #include "log.h"
 #include "sysinfo.h"
 
+extern	int	CONFIG_SERVER_STARTUP_TIME;
 extern	int	get_value_internal(DB_ITEM *item, AGENT_RESULT *result);
 
 #endif
